// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contactFormNotificationEmail > optional fields handling > should generate correct output with only required fields 1`] = `
"
    <!DOCTYPE html>
    <html>
    <head>
      <style>
        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #333; }
        .container { max-width: 600px; margin: 0 auto; padding: 20px; }
        .header { background: #2563eb; color: white; padding: 20px; text-align: center; border-radius: 8px 8px 0 0; }
        .content { background: #f9fafb; padding: 20px; border-radius: 0 0 8px 8px; }
        .details { background: white; padding: 15px; border-radius: 8px; margin: 15px 0; }
        .detail-row { padding: 8px 0; border-bottom: 1px solid #eee; }
        .detail-row:last-child { border-bottom: none; }
        .label { color: #666; font-weight: 600; }
        .message-box { background: #f3f4f6; padding: 15px; border-radius: 8px; border-left: 4px solid #2563eb; margin: 15px 0; }
        .footer { text-align: center; padding: 20px; color: #666; font-size: 14px; }
      </style>
    </head>
    <body>
      <div class="container">
        <div class="header">
          <h1>New Contact Form Submission</h1>
        </div>
        <div class="content">
          <p>You have received a new message through your website contact form.</p>

          <div class="details">
            <div class="detail-row">
              <span class="label">From:</span> John Doe (john@test.com)
            </div>
            
            
            <div class="detail-row">
              <span class="label">Submitted:</span> 2024-01-01
            </div>
            
          </div>

          <div class="message-box">
            <div class="label">Message:</div>
            <p style="margin: 10px 0 0 0; white-space: pre-wrap;">Test message</p>
          </div>

          <p><strong>Reply to:</strong> <a href="mailto:john@test.com">john@test.com</a></p>
        </div>
        <div class="footer">
          <p>Test Shop • Powered by DiveStreams</p>
        </div>
      </div>
    </body>
    </html>
  "
`;

exports[`contactFormNotificationEmail > optional fields handling > should generate correct output with only required fields 2`] = `
"
New Contact Form Submission

From: John Doe (john@test.com)


Submitted: 2024-01-01


Message:
Test message

Reply to: john@test.com

Test Shop • Powered by DiveStreams
  "
`;

exports[`contactFormNotificationEmail > should generate correct output for default data 2`] = `
"
    <!DOCTYPE html>
    <html>
    <head>
      <style>
        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #333; }
        .container { max-width: 600px; margin: 0 auto; padding: 20px; }
        .header { background: #2563eb; color: white; padding: 20px; text-align: center; border-radius: 8px 8px 0 0; }
        .content { background: #f9fafb; padding: 20px; border-radius: 0 0 8px 8px; }
        .details { background: white; padding: 15px; border-radius: 8px; margin: 15px 0; }
        .detail-row { padding: 8px 0; border-bottom: 1px solid #eee; }
        .detail-row:last-child { border-bottom: none; }
        .label { color: #666; font-weight: 600; }
        .message-box { background: #f3f4f6; padding: 15px; border-radius: 8px; border-left: 4px solid #2563eb; margin: 15px 0; }
        .footer { text-align: center; padding: 20px; color: #666; font-size: 14px; }
      </style>
    </head>
    <body>
      <div class="container">
        <div class="header">
          <h1>New Contact Form Submission</h1>
        </div>
        <div class="content">
          <p>You have received a new message through your website contact form.</p>

          <div class="details">
            <div class="detail-row">
              <span class="label">From:</span> James Anderson (james@example.com)
            </div>
            <div class="detail-row"><span class="label">Phone:</span> +1-555-123-4567</div>
            <div class="detail-row"><span class="label">Subject:</span> Question about dive courses</div>
            <div class="detail-row">
              <span class="label">Submitted:</span> 2024-06-15 10:30 AM
            </div>
            <div class="detail-row"><span class="label">Page:</span> &#x2F;courses</div>
          </div>

          <div class="message-box">
            <div class="label">Message:</div>
            <p style="margin: 10px 0 0 0; white-space: pre-wrap;">I&#x27;m interested in getting my Open Water certification. Do you have any upcoming classes?</p>
          </div>

          <p><strong>Reply to:</strong> <a href="mailto:james@example.com">james@example.com</a></p>
        </div>
        <div class="footer">
          <p>Seaside Dive Center • Powered by DiveStreams</p>
        </div>
      </div>
    </body>
    </html>
  "
`;

exports[`contactFormNotificationEmail > should generate correct output for default data 3`] = `
"
New Contact Form Submission

From: James Anderson (james@example.com)
Phone: +1-555-123-4567
Subject: Question about dive courses
Submitted: 2024-06-15 10:30 AM
Page: &#x2F;courses

Message:
I&#x27;m interested in getting my Open Water certification. Do you have any upcoming classes?

Reply to: james@example.com

Seaside Dive Center • Powered by DiveStreams
  "
`;
